# BestHack2022-DataScience

./: .gitignore  .pre-commit-config.yaml  Beeline.ipynb  ByDay_to_Entire.py  CONTRIBUTING.md  EDA.ipynb  Entire_to_ByID.py  README.md  Transactions.ipynb  beeline_antispam_hakaton_id_samples.csv  classification.ipynb  dvc.yaml  old EDA.ipynb  old classification.ipynb  pyproject.toml  requirements.txt  win_requirements.txt  Часть I - ML.ipynb  Часть II - R&D.ipynb
data/interim/: .gitignore
models/: .gitignore
notebooks/: EDA.ipynb  Part1_ML.ipynb  old EDA.ipynb  old classification.ipynb  old_EDA.ipynb  old_classification.ipynb  Часть I - ML.ipynb
references/: README.md
references/xak/: fist_file.ipynb  second_file.ipynb
src/data/: ByDay_to_Entire.py  Entire_to_ByID.py  aggregation.py  by_day_to_entire.py  data_splitting.py  entire_to_by_id_src.py  make_and_split_dataset.py
src/features/: get_features_from_datetime.py  get_features_from_duration.py  get_features_from_forward.py  get_features_from_id_b.py  get_features_from_id_dst.py  get_features_from_num_b_length.py  get_features_from_num_dst_length.py  get_features_from_source_b.py  get_features_from_source_f.py  get_features_from_time_zone.py  get_features_from_zero_call_flg.py
src/models/: train_catboost.py
